--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,22 @@
 	<dependencies>
 
 	</dependencies>
-
-
+<build>
+	<plugins>
+		<plugin>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-maven-plugin</artifactId>
+		</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-release-plugin</artifactId>
+			<configuration>
+				<goals>install</goals>
+			</configuration>
+		</plugin>
+	</plugins>
+</build>
+<scm>
+	<developerConnection>scm:git:git@github.com:rashid372/springframework5.git</developerConnection>
+</scm>
 </project>
