add release plugin configuration

--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,22 @@
 #release configuration
-#Mon Sep 20 11:18:40 PKT 2021
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
-pushChanges=true
-scm.url=scm\:git\:git@github.com\:rashid372/springframework5.git
-preparationGoals=clean verify
-projectVersionPolicyId=default
-remoteTagging=true
+#Mon Sep 20 11:22:15 PKT 2021
 scm.commentPrefix=[maven-release-plugin] 
+project.scm.com.bigdata\:springframework5-web.empty=true
+pushChanges=true
+project.scm.com.bigdata\:springframework5-data.empty=true
+project.rel.com.bigdata\:springframework5=0.0.2
+scm.tag=0.0.2
+remoteTagging=true
+project.scm.com.bigdata\:springframework5.developerConnection=scm\:git\:git@github.com\:rashid372/springframework5.git
+project.scm.com.bigdata\:springframework5.tag=HEAD
+project.dev.com.bigdata\:springframework5-data=0.0.3-SNAPSHOT
+projectVersionPolicyId=default
+project.dev.com.bigdata\:springframework5-web=0.0.3-SNAPSHOT
+scm.url=scm\:git\:git@github.com\:rashid372/springframework5.git
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+preparationGoals=clean verify
+project.rel.com.bigdata\:springframework5-web=0.0.2
 exec.snapshotReleasePluginAllowed=false
-completedPhase=check-poms
+project.rel.com.bigdata\:springframework5-data=0.0.2
+project.dev.com.bigdata\:springframework5=0.0.3-SNAPSHOT
+completedPhase=run-preparation-goals
