--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	</parent>
 	<groupId>com.bigdata</groupId>
 	<artifactId>springframework5</artifactId>
-	<version>0.0.2</version>
+	<version>0.0.3</version>
 	<name>springframework5</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -40,6 +40,6 @@
 </build>
 <scm>
 	<developerConnection>scm:git:git@github.com:rashid372/springframework5.git</developerConnection>
-  <tag>Head</tag>
+  <tag>0.0.3</tag>
   </scm>
 </project>
